--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,4 @@
-.popup_input {
+.popup__input {
   display: block;
   margin: 0 0 13px 0;
   background-color: #fff;
@@ -11,7 +11,7 @@
   padding: 0;
   outline: none;
 }
-.popup_input:focus {
+.popup__input:focus {
   outline: blue 1px solid;
   border-radius: 2px;
 }
