--- a/blocks/popup/__item/popup__item.css
+++ b/blocks/popup/__item/popup__item.css
@@ -1,14 +1,14 @@
-.popup_item {
+.popup__item {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   margin: 0 36px 30px 36px;
 }
-.popup_item:last-of-type {
+.popup__item:last-of-type {
   margin-bottom: 0;
 }
 @media (max-width: 650px) {
-  .popup_item {
+  .popup__item {
     margin: 0 22px 30px 22px;
   }
 }
