--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -1,4 +1,4 @@
-.popup_text {
+.popup__text {
   font-weight: 900;
   font-size: 24px;
   line-height: 1.2;
@@ -9,7 +9,7 @@
   max-width: 330px;
 }
 @media (max-width: 650px) {
-  .popup_text {
+  .popup__text {
     font-size: 18px;
     max-width: 238px;
     margin: 0 22px 75px 22px;
