--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -1,4 +1,4 @@
-.profile__button_add {
+.profile__button-add {
   border: 2px solid #fff;
   border-radius: 2px;
   width: 150px;
@@ -12,22 +12,22 @@
   transition: opacity 0.3s linear;
   justify-self: flex-end;
 }
-.profile__button_add:hover {
+.profile__button-add:hover {
   opacity: 0.5;
   cursor: pointer;
 }
 @media (max-width: 1024px) {
-  .profile__button_add {
+  .profile__button-add {
     width: 120px;
   }
 }
 @media (max-width: 980px) {
-  .profile__button_add {
+  .profile__button-add {
     width: 100px;
   }
 }
 @media (max-width: 820px) {
-  .profile__button_add {
+  .profile__button-add {
     grid-area: button;
     width: 271px;
     margin: 0 auto;
