Refactoring: убрала горизонтальный скролл, отредактировала попап и блок с каринками

--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -1,7 +1,7 @@
 .element__like {
   width: 22px;
   height: 19px;
-  margin-right: 17px;
+  margin: 30px 20px 31px 0;
   transition: opacity 0.3s linear;
 }
 .element__like:hover {
