--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -4,16 +4,23 @@
   grid-template-columns: repeat(3, minmax(23%, 1fr));
   grid-template-rows: repeat(2, minmax(48%, 1fr));
   gap: 20px 17px;
+  padding: 50px 0 66px 0;
 }
 @media (max-width: 820px) {
   .elements {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
+    padding: 40px 0 50px 0;
   }
 }
 @media (max-width: 595px) {
   .elements {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(6, 1fr);
+  }
+}
+@media (max-width: 425px) {
+  .elements{
+    padding: 36px 19px 48px 19px;
   }
 }
