--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,6 +1,7 @@
 .header__logo {
-  margin: 0 0 41px 0;
   transition: opacity 0.3s linear;
+  width: 142px;
+  height: 33px;
 }
 .header__logo:hover {
   opacity: 0.5;
@@ -10,10 +11,5 @@
   .header__logo {
     width: 103px;
     height: 25px;
-  }
-}
-@media (max-width: 320px) {
-  .header__logo {
-    margin: 0 0 31px 27px;
   }
 }
