--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -7,18 +7,20 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 294px;
 }
 @media (max-width: 980px) {
   .profile__name {
     font-size: 36px;
   }
 }
-@media (max-width: 320px) {
+@media (max-width: 425px) {
   .profile__name {
     font-size: 27px;
+    max-width: 189px;
   }
 }
-@media (max-width: 320px){
+@media (max-width: 320px) {
   .profile__name {
     margin-right: 10px;
   }
