--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -1,5 +1,6 @@
 .element__title {
-  margin-left: 21px;
+  margin: 25px 0 31px 21px;
+  padding: 0;
   font-weight: 900;
   font-size: 24px;
   line-height: 1.2;
