--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,3 +1,12 @@
 .header {
   max-width: 100%;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  padding-bottom: 41px;
+  display: flex;
+  flex-direction: column;
+}
+@media (max-width: 425px) {
+  .header {
+    padding: 0 27px 42px 27px;
+  }
 }
