--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,6 +1,5 @@
 .popup__input {
-  display: block;
-  margin: 0 0 13px 0;
+  margin: 0 36px 30px 36px;
   background-color: #fff;
   border: none;
   font-weight: 400;
@@ -8,10 +7,21 @@
   color: #000;
   line-height: 17px;
   text-align: left;
-  padding: 0;
+  padding: 0 0 13px 0;
   outline: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  width: 358px;
 }
 .popup__input:focus {
   outline: blue 1px solid;
   border-radius: 2px;
+}
+.popup__input:last-of-type {
+  margin-bottom: 0;
+}
+@media (max-width: 650px) {
+  .popup__input {
+    margin: 0 22px 30px 22px;
+    width: 238px;
+  }
 }
