--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -4,4 +4,12 @@
   border-radius: 50%;
   margin: 0;
   padding: 0;
+  margin-right: 30px;
+}
+@media (max-width: 820px) {
+  .profile__avatar {
+    grid-area: avatar;
+    margin: 0 auto;
+    margin-bottom: 30px;
+  }
 }
