--- a/blocks/profile/__image-add/profile__image-add.css
+++ b/blocks/profile/__image-add/profile__image-add.css
@@ -2,3 +2,9 @@
   width: 22px;
   height: 22px;
 }
+@media (max-width: 320px) {
+  .profile__image-add {
+    width: 16px;
+    height: 16px;
+  }
+}
