--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -3,6 +3,7 @@
   align-items: center;
   display: grid;
   grid-template-columns: repeat(2, max-content) 1fr;
+  padding-top: 40px;
 }
 @media (max-width: 820px) {
   .profile {
@@ -11,5 +12,10 @@
       "info"
       "button";
     grid-template-columns: 1fr;
+  }
+}
+@media (max-width: 425px) {
+  .profile {
+    padding: 42px 19px 0 19px;
   }
 }
