--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -7,10 +7,12 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 366px;
 }
 @media (max-width: 980px) {
   .profile__about {
     font-size: 16px;
+    max-width: 282px;
   }
 }
 @media (max-width: 320px) {
