--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -2,6 +2,8 @@
   max-width: 100%;
   display: flex;
   flex-direction: column;
+  z-index: 2;
+  position: relative;
 }
 @media (max-width: 820px) {
   .element {
