refactoring:обноовить открытие попапов, сделать alt у изображений, вынести функции из большой функции

--- a/blocks/popup/__container-full-screen/popup__container-full-screen.css
+++ b/blocks/popup/__container-full-screen/popup__container-full-screen.css
@@ -1,5 +1,6 @@
-.full-screen__container{
+.popup__container-full-screen {
   max-width: 75vw;
+  max-height: 75vh;
   z-index: 10;
   opacity: 1;
   position: relative;
