--- a/pages/index.css
+++ b/pages/index.css
@@ -39,3 +39,7 @@
 @import url(../blocks/popup/__full-text/popup__full-text.css);
 @import url(../blocks/popup/_full-screen/popup_full-screen.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__input/_type_error/popup__input_type_error.css);
+@import url(../blocks/popup/__fieldset/popup__fieldset.css);
+@import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
+@import url(../blocks/popup/__input/_type_error-active/popup__input_type_error-active.css);
