--- a/src/blocks/popup/__button/_disabled/popup__button_disabled.css
+++ b/src/blocks/popup/__button/_disabled/popup__button_disabled.css
@@ -1,4 +1,7 @@
 .popup__button_disabled{
-  opacity: 0.2;
+  color: rgba(0, 0, 0, 0.2);
+  background: inherit;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 2px;
   cursor: default;
 }
