Refactoring: подкдючение к северу

--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -5,10 +5,12 @@
   margin: 0;
   padding: 0;
   margin-right: 30px;
+  object-fit: cover;
+  background-position: center;
+  position: relative;
 }
 @media (max-width: 820px) {
   .profile__avatar {
-    grid-area: avatar;
     margin: 0 auto;
     margin-bottom: 30px;
   }
