--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -7,11 +7,10 @@
 }
 @media (max-width: 820px) {
   .profile {
-    grid-template-areas:
-      "avatar"
-      "info"
-      "button";
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 38px;
   }
 }
 @media (max-width: 425px) {
